# ArabToRoman

./: CMakeLists.txt  LEEME  arabToRomano  arabToRomano.c  arabToRomano.c.~1~  arabToRomano.c.~2~  c_facil.h  makefile
config/: exrc  vim_spell_en.tar  vim_spell_es.tar
